Forced font-family on tooltips to avoid wrong font inheritance.

--- a/src/tooltips.less
+++ b/src/tooltips.less
@@ -8,6 +8,7 @@
     color: @light-color;
     content: attr(data-tooltip);
     display: block;
+    font-family: @body-font-family;
     font-size: @font-size-sm;
     left: 50%;
     max-width: 32rem;
